fixing spacing issue

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .MuiGrid-container{
-    padding: 10px;
-    padding-right: 0px;
+    /* padding: 10px;
+    padding-right: 0px; */
     padding-top: 35px;
 }
 
